@@ -1,0 +1,14 @@
+This test checks whether various forms of assignment expression are allowed. It should print the numbers 1-10 on separate lines, and nothing else (besides this paragraph).
+
+
+1
+2
+3
+4
+5
+6
+7
+8
+9
+10
+
