@@ -1,0 +1,38 @@
+<body>
+<p>
+This test checks whether various forms of assignment expression are
+allowed. It should print the numbers 1-10 on separate lines, and
+nothing else (besides this paragraph).
+<p>
+<hr>
+<pre id="console">
+</pre>
+<script>
+if (window.layoutTestController)
+    layoutTestController.dumpAsText();
+
+function log(s)
+{
+    document.getElementById('console').innerHTML += s + '<br>';
+}
+
+var x = 0;
+var y = 0;
+
+try { eval ('x = 1; log(x);'); } catch (e) {}
+try { eval ('window.x = 2; log(x);'); } catch (e) {}
+try { eval ('window["x"] = 3; log(x);'); } catch (e) {}
+try { eval ('(x) = 4; log(x);'); } catch (e) {}
+try { eval ('(window.x) = 5; log(x);'); } catch (e) {}
+try { eval ('(window["x"]) = 6; log(x);'); } catch (e) {}
+try { eval ('y, x = 7; log(x);'); } catch (e) {}
+try { eval ('((x)) = 8; log(x);'); } catch (e) {}
+try { eval ('((window.x)) = 9; log(x);'); } catch (e) {}
+try { eval ('((window["x"])) = 10; log(x);'); } catch (e) {}
+try { eval ('(y, x) = "FAIL"; log(x);'); } catch (e) {}
+try { eval ('(true ? x : y) = "FAIL"; log(x);'); } catch (e) {}
+try { eval ('x++ = "FAIL"; log(x);'); } catch (e) {}
+
+</script>
+
+</body>
