@@ -1,0 +1,3 @@
+This test checks whether converting function code to a string preserves semantically significant parentheses. The results should say PASS.
+PASS
+
